keys/FilteredModel: Remove deprecated invalidation, check if currentItem exists

invalidateFilter is deprecated,  begin/endFilterChange instead.

During deletion or rapid changes, currentItem can be null.
In those cases, reset the index to -1 and return early to avoid working
on null item.

This fixes crashing when user changes search filter rapidly.

BUG: 516488
BUG: 516607
(cherry picked from commit e6023ff02ec3b1f3f081b07f6b942cfb2b9c0793)